fixing line spacing

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h2 {
 
 p.content {
     color: var(--light-grey);
+    line-height: 1.5;
 }
 
 .bottom {
